--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link href="../../public/css/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css" >
 </head>
 <body>
     <header>
@@ -23,6 +23,15 @@
     </header>
 
     <main>
+        <h2>Latest Posts</h2>
+        <section class="recent-posts">
+            <a href="#">
+                <article>
+                    <h2>Blog title</h2>
+                    <p>beginning blog name</p>
+                </article>
+            </a>
+        </section>
         
     </main>
     
