fixed handlebars issue with rendering layouts, body and partials. Originally was calling page wrong as well as wrong version of express handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,24 +15,15 @@
 
             </div>
             <ul>
-                <li>Home</li>
-                <li>DashBoard</li>
-                <li>Login</li>
+                <li><a href='/'>Home</a></li>
+                <li><a href='/dashboard'>Dash Board</a></li>
+                <li><a href='/login'>Login</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h2>Latest Posts</h2>
-        <section class="recent-posts">
-            <a href="#">
-                <article>
-                    <h2>Blog title</h2>
-                    <p>beginning blog name</p>
-                </article>
-            </a>
-        </section>
-        
+        {{{body}}}
     </main>
     
 </body>
