--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,15 @@
+{{!-- {{#each blog.post as |post| }} 
+    {{> blogpost}}
+        
+{{#each}} --}}
 
 <section class="recent-posts">
-    <h1>Latest Posts</h1>
-    <a href="#">
-        <article>
-            <h2>Blog title</h2>
-            <p>beginning blog name</p>
-        </article>
-    </a>
-</section>
+                  <h2>Latest Posts</h2>
+
+            <a href="#">
+                <article>
+                    <h2>Blog title</h2>
+                    <p>beginning blog name</p>
+                </article>
+            </a>
+        </section>
