deleted test handlebar views. Also reworked some routes to handle proper view handling

--- a/views/partials/blogpost.handlebars
+++ b/views/partials/blogpost.handlebars
@@ -4,7 +4,7 @@
     <a href="#">
         <article>
             <h2>{{title}}</h2>
-            <p>{{text}}</p>
+            <p>{{description}}</p>
         </article>
     </a>
 </section>
