--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,8 +17,11 @@
             <label for="name">Name:</label>
             <input type="text" id="name" placeholder="John Doe"/>
 
-            <label for="username">Username:</label>
+            <label for="new-username">Username:</label>
             <input type="text" id="new-username" placeholder="john123"/>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" placeholder="john123@gmail.com"/>
 
             <label for="new-pswd">Password:</label>
             <input type="password" id='new-pswd'/>
