--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" >
+    <link rel="stylesheet" type="text/css" href="/css/login.css" >
+    <link rel="stylesheet" type="text/css" href="/css/profile.css" >
+
+
 </head>
 <body>
     <header>
