--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,8 +3,8 @@
     <article>
         <h2>Sign In</h2>
         <form>
-            <label for="username">Username:</label>
-            <input type="text" id="username" placeholder="john123"/>
+            <label for="signin-email">Email:</label>
+            <input type="text" id="signin-email" placeholder="john123@gmail.com"/>
 
             <label for="username">Password:</label>
             <input type="password" id='password'/>
@@ -21,7 +21,7 @@
             <input type="text" id="new-username" placeholder="john123"/>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" placeholder="john123@gmail.com"/>
+            <input type="text" id="email" placeholder="john123@gmail.com"/>
 
             <label for="new-pswd">Password:</label>
             <input type="password" id='new-pswd'/>
