--- a/views/partials/blogpost.handlebars
+++ b/views/partials/blogpost.handlebars
@@ -1,10 +1,8 @@
 <section class="recent-posts">
-    <h2>Latest Posts</h2>
-
     <a href="#">
         <article>
             <h2>{{title}}</h2>
-            <p>{{description}}</p>
+            <p>{{content}}</p>
         </article>
     </a>
 </section>
