--- a/views/partials/blogpost.handlebars
+++ b/views/partials/blogpost.handlebars
@@ -1,8 +1,6 @@
-<section class="recent-posts">
-    <a href="#">
+    <a href="#" class="recent-posts">
         <article>
             <h2>{{title}}</h2>
             <p>{{content}}</p>
         </article>
     </a>
-</section>
