created backbone of home, login, and profile (dashboard) page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,7 @@
-
+<head>
+    <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="/css/login.css" >
+</head>
 <section class="login">
     <article>
         <h2>Sign In</h2>
