--- a/views/partials/blogpost.handlebars
+++ b/views/partials/blogpost.handlebars
@@ -1,6 +1,7 @@
-    <a href="#" class="recent-posts">
+    <a href="#" class="recent-posts" id="post-{{id}}">
         <article>
             <h2>{{title}}</h2>
+            <p>{{createdAt}}</p>
             <p>{{content}}</p>
         </article>
     </a>
