--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" >
-    <link rel="stylesheet" type="text/css" href="/css/login.css" >
-    <link rel="stylesheet" type="text/css" href="/css/profile.css" >
-
 
 </head>
 <body>
@@ -20,8 +13,14 @@
             </div>
             <ul>
                 <li><a href='/'>Home</a></li>
-                <li><a href='/dashboard'>Dash Board</a></li>
-                <li><a href='/login'>Login</a></li>
+                <li><a href='/profile'>Dash Board</a></li>
+                {{#if loggedIn}}
+                    <li><a href='/login' id="logout">Log out</a></li>
+                {{/if}}
+
+                {{#unless loggedIn}}
+                    <li><a href='/login'>Login</a></li>
+                {{/unless}}
             </ul>
         </nav>
     </header>
@@ -30,5 +29,8 @@
         {{{body}}}
     </main>
     
+    {{#if loggedIn}}
+        <script src="/js/logout.js"></script>
+    {{/if}}
 </body>
 </html>
