--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,19 +1,42 @@
 .new-post-container {
   flex-direction: column;
-  border: solid blue 3px;
 }
 
 .new-post-container form {
   align-self: center;
-  border: solid green 3px;
   width: 50vw;
 }
 
 .new-post-container form h2 {
-  padding: 1em 0;
+  /* padding: 1em 0; */
 }
 
 .new-post-container form textarea {
   width: 100%;
   height: 30vh;
+  font-size: 1.25rem;
+  padding: 0.5em;
+}
+
+.old-posts-container {
+  margin: 0 -1.5em;
+  background-color: var(--tertiary-color);
+  padding: 1.5em;
+  border: solid green 3px;
+  display: flex;
+}
+
+#profile-allPosts {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 2em;
+  column-gap: 2em;
+}
+
+#profile-allPosts .recent-posts:first-of-type {
+  flex: 1 1 100%;
+}
+#profile-allPosts .recent-posts {
+  flex: 1 1 25em;
+  height: 50vh;
 }
