--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@ h1 {
   border-radius: 10px;
   padding: 0.5em;
   cursor: pointer;
-  box-shadow: 5px 5px 5px white;
+  box-shadow: 3px 3px 3px white;
 }
 
 ul {
@@ -63,8 +63,6 @@ section {
   display: flex;
   flex-wrap: wrap;
   row-gap: 2em;
-  /* align-items: center; */
-  /* justify-content: center; */
 }
 
 #all-posts {
@@ -74,7 +72,6 @@ section {
 }
 .recent-posts {
   flex: 1 1 10em;
-  /* height: 50vh; */
 }
 
 .recent-posts h2 {
@@ -103,13 +100,15 @@ a article {
   /* border-radius: 10px; */
   overflow: hidden;
   opacity: 0.75;
+  border-radius: 7px;
+
+  box-shadow: 0 3px 3px 3px var(--secondary-color);
 }
 
 a article:hover {
   opacity: 1;
-  border-radius: 7px;
+  transform: translate(-0.75vw, -0.75vh);
   transition: 0.3s ease-in-out;
-  box-shadow: 0 5px 5px 5px var(--secondary-color);
 }
 
 a article p {
@@ -122,6 +121,5 @@ a article p {
 
 a article a article > * {
   padding: 1em;
-
   width: 100%;
 }
