integrated comments section into individual blogposts. Lastly, need to work on update and delete function of user posts while logged in

--- a/views/tech-article.handlebars
+++ b/views/tech-article.handlebars
@@ -1,11 +1,23 @@
-<head>
+    <head>
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/fullArticle.css"/>
 </head>
 <section class="full-article">
     <div>
         {{>full-post-view}}
-        {{>post-comments}}
+        <article class="post-comments">
+    <form>
+        <label for="new-comment">Leave a comment!</label>
+        <textarea class="new-comment"></textarea>
+        <button id="submit-comment">Submit</button>
+    </form>
+    <div class="all-post-comments">
+        <h2>Comments:</h2>
+        {{#each comments as |comment|}}
+            {{>post-comments}}
+        {{/each}}
+    </div>
+</article>
     </div>
 
 </section>
