--- a/views/partials/post-comments.handlebars
+++ b/views/partials/post-comments.handlebars
@@ -1,8 +1,11 @@
-<article class="post-comments">
-    <h2>Comments:</h2>
-    <form>
-        <label for="new-comment">Leave a comment!</label>
-        <textarea class="new-comment"></textarea>
-        <button id="submit-comment">Submit</button>
-    </form>
-</article>
+
+            <div class="single-comment">
+                <h4>{{user}}</h4>
+                <p>
+                    {{text}}
+                </p>
+                <p>
+                    {{!-- {{comment.createdAt}} --}}
+                </p>
+            </div>
+     
