--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -55,3 +55,13 @@ button {
   flex: 1 1 20;
   height: 50vh;
 }
+
+@media screen and (max-width: 650px) {
+  .new-post-container {
+    width: 100%;
+    margin: 1em 0;
+  }
+  form {
+    width: 100%;
+  }
+}
