--- a/views/partials/full-post-view.handlebars
+++ b/views/partials/full-post-view.handlebars
@@ -1,4 +1,4 @@
-<article class="post-content">
+<article class="post-content" id="{{id}}">
     <h1>{{title}}</h1>
     <p>{{createdAt}}</p>
     <p>{{content}}</p>
