--- a/public/css/fullArticle.css
+++ b/public/css/fullArticle.css
@@ -1,6 +1,8 @@
 h1 {
   font-size: 2rem;
   background-color: none;
+  padding: 0;
+  margin: 0;
 }
 
 section div,
@@ -17,10 +19,17 @@ form {
 textarea,
 button {
   padding: 0.5em;
+  font-size: 1.1rem;
 }
 
+button {
+  cursor: pointer;
+  color: white;
+  background-color: var(--secondary-color);
+  font-weight: bold;
+}
 textarea {
-  height: 30%;
+  height: 100%;
 }
 
 .post-content p {
@@ -53,4 +62,8 @@ textarea {
   .all-post-comments {
     flex: 1 1 100%;
   }
+}
+
+main {
+  padding: 1em;
 }
