--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 <head>
     <title>News Feed</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" type="text/css" href="/css/profile.css" >
-
 </head>
 <section class="new-post-container" id="{{userId}}">
     <h1 style="flex-basis: 100%;">Welcome {{name}}</h1>
