finished delete functionality on frontend and backend => tested and works

--- a/views/partials/blogpost.handlebars
+++ b/views/partials/blogpost.handlebars
@@ -1,8 +1,8 @@
-    <a href="/posts/{{id}}" class="recent-posts" id="post-{{id}}">
+    <a class="recent-posts" id="{{id}}">
         <article>
             <div class="post-header">
                 <h2>{{title}}
-                <i class="fa-solid fa-pen-to-square" id="edit-btn"></i>
+                <i class="fa-solid fa-pen-to-square" id="edit-btn" data-post-id="{{id}}"></i>
 
                 </h2>
             </div>
