formatted dates on all pages. Also created and fully styled edit page. Lastly, need to integrate prior blog post data into frontend, and functionality to handle PUT request in the backend

--- a/views/tech-article.handlebars
+++ b/views/tech-article.handlebars
@@ -13,7 +13,7 @@
             </form>
             <div class="all-post-comments">
                 <h2>Comments:</h2>
-                {{#each comments as |comment|}}
+                {{#each formatComments as |comment|}}
                     {{>post-comments}}
                 {{/each}}
             </div>
