--- a/views/partials/post-comments.handlebars
+++ b/views/partials/post-comments.handlebars
@@ -5,7 +5,7 @@
                     {{text}}
                 </p>
                 <p>
-                    {{!-- {{comment.createdAt}} --}}
+                    {{createdAt}}
                 </p>
             </div>
      
