--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,16 +20,16 @@
             <label for="name">Name:</label>
             <input type="text" id="name" placeholder="John Doe"/>
 
-            <label for="new-username">Username:</label>
-            <input type="text" id="new-username" placeholder="john123"/>
+            <label for="newUsername">Username:</label>
+            <input type="text" id="newUsername" placeholder="john123"/>
 
             <label for="email">Email:</label>
             <input type="text" id="email" placeholder="john123@gmail.com"/>
 
-            <label for="new-pswd">Password:</label>
-            <input type="password" id='new-pswd'/>
-            <label for="new-pswd">Repeat Password:</label>
-            <input type="password" id='repeat-pswd'/>
+            <label for="newPswd">Password:</label>
+            <input type="password" id='newPswd'/>
+            <label for="newPswd">Repeat Password:</label>
+            <input type="password" id='repeatPswd'/>
             
             <button id="sign-up">Sign-Up</button>
 
